--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-list-drag-and-drop": "^0.9.2",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
