--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-list-drag-and-drop": "^0.9.2",
     "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
+    "sweetalert2": "^10.12.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
